...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:windowBackground"
            tools:context=".ui.IngredientAddFragment">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/ingredient_add_top_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="10dp"
                android:minHeight="?attr/actionBarSize"
                android:paddingEnd="6dp"
                android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
...
                app:menu="@menu/ingredient_lsit_top_app_bar"
                app:navigationIcon="@drawable/ic_close_24"
                app:title="Add an ingredient"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ingredient_add_text_layout_description"
                style="@style/Theme.FoodBit.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
...
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredient_add_top_bar"
                app:startIconDrawable="@drawable/ic_description_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ingredient_add_edit_text_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Description"
                    android:inputType="text"
                    android:maxLines="1"
                    tools:ignore="HardcodedText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ingredient_add_text_layout_best_before"
                style="@style/Theme.FoodBit.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredient_add_text_layout_description"
                app:startIconDrawable="@drawable/ic_schedule_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ingredient_add_edit_text_best_before"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ingredient_add_text_layout_location"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
...
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="HardcodedText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ingredient_add_text_layout_amount"
                style="@style/Theme.FoodBit.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredient_add_text_layout_location"
                app:startIconDrawable="@drawable/ic_numbers_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ingredient_add_edit_text_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Amount"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    tools:ignore="HardcodedText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ingredient_add_text_layout_unit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
...
                    app:layout_constraintTop_toBottomOf="@+id/ingredient_add_text_layout_amount"
                    tools:ignore="HardcodedText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ingredient_add_text_layout_category"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
...
