...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/recipe_input_top_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:paddingEnd="6dp"
                android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
                app:layout_constraintEnd_toEndOf="parent"
...
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/recipe_input_text_layout_category"
                app:layout_constraintEnd_toStartOf="@+id/recipe_input_text_layout_title"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_input_top_bar"
                tools:layout_conversion_absoluteHeight="175dp"
                tools:layout_conversion_absoluteWidth="178dp">

...
                app:layout_constraintTop_toBottomOf="@+id/recipe_input_top_bar"
                app:startIconDrawable="@drawable/ic_title_24"
                tools:layout_conversion_absoluteHeight="82dp"
                tools:layout_conversion_absoluteWidth="178dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/recipe_input_edit_text_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Title"
                    android:maxLines="1"
                    tools:ignore="HardcodedText"
                    tools:layout_conversion_absoluteHeight="56dp"
...
                    tools:layout_conversion_absoluteWidth="178dp"
                    tools:layout_editor_absoluteX="218dp"
                    tools:layout_editor_absoluteY="191dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/recipe_input_text_layout_prep_time"
                style="@style/Theme.FoodBit.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
...
                app:startIconDrawable="@drawable/ic_twotone_timer_24"
                app:suffixText="minutes"
                tools:layout_conversion_absoluteHeight="96dp"
                tools:layout_conversion_absoluteWidth="379dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/recipe_input_edit_text_prep_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Preparation Time"
                    android:inputType="number"
                    android:maxLines="1"
                    tools:ignore="HardcodedText"
...
                    tools:layout_conversion_absoluteWidth="379dp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="285dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/recipe_input_text_layout_num_servings"
                style="@style/Theme.FoodBit.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
...
                app:startIconDrawable="@drawable/ic_numbers_24"
                app:suffixText="servings"
                tools:layout_conversion_absoluteHeight="96dp"
                tools:layout_conversion_absoluteWidth="379dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/recipe_input_edit_text_num_servings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Number of Servings"
                    android:inputType="number"
                    android:maxLines="1"
                    tools:ignore="HardcodedText"
...
                    android:minHeight="@android:dimen/app_icon_size"
                    android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:menu="@menu/recipe_add_ingredient"
                    app:title="Ingredients" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recipe_input_ingredients_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
...
